syntax = "proto3";
import "google/protobuf/timestamp.proto";
import "google/api/annotations.proto";
import "buf/validate/validate.proto";

package togo;

option go_package = "internal/genproto";

message Task{
    int64 ID = 1 [json_name="id", (buf.validate.field).int64.gt = 1 ];
    int64 UserID = 2 [json_name="user_id", (buf.validate.field).int64.gt = 1];
    string Name = 3 [json_name="name" , (buf.validate.field).string.min_len = 1];
}

message Error{
    int32 ErrorCode = 1 [json_name="err_code"];
    string ErrorDesc = 2 [json_name="err_desc"];
}

message CreateTaskRequest{
    int64 userID = 1 [(buf.validate.field) = {
        required: true,
    }];
    string name = 2 [(buf.validate.field) = {
        required: true,
    }];
}

message CreateTaskResponse{
    Error error = 1; 
    Task task = 2;
}

service TaskService{
    rpc CreateTask(CreateTaskRequest) returns (CreateTaskResponse){
        option (google.api.http) = {
            post: "/users/{userID}/tasks"
            body: "*"
        };
    }
}